--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -52,6 +53,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-native-svg-transformer": "^1.5.0",
