--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
           "backgroundColor": "#181818ß"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
