--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "expo": "~52.0.37",
     "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.7",
-    "expo-dev-client": "~5.0.14",
+    "expo-build-properties": "^0.13.2",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
