--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "ensoulee",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
     "splash": {
@@ -23,7 +23,8 @@
         "backgroundColor": "#181818"
       },
       "package": "com.jkb5bg.ensoulee",
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "/google-services.json"
+
     },
     "web": {
       "bundler": "metro",
