--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.37",
     "expo-auth-session": "^6.0.3",
+    "expo-background-fetch": "~13.0.6",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.8",
@@ -42,11 +44,13 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
+    "expo-task-manager": "~12.0.6",
     "expo-web-browser": "~14.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-base64": "^0.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -54,9 +58,7 @@
     "react-native-svg": "15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-background-fetch": "~13.0.6",
-    "expo-task-manager": "~12.0.6"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
