--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-native-material/core": "^1.3.7",
     "@react-native-picker/picker": "^2.11.0",
@@ -51,6 +52,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-base64": "^0.2.1",
+    "react-native-draggable-flatlist": "^4.0.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
