--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
